fix grid layout issue

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -6,13 +6,16 @@
             max-width: $max-content-width;
             margin: 0 auto;
             padding: 0 20px;
+
+            @media (max-width: $breakpoint-sm) {
+                    padding: 0 0;
+                }
         }
 
     &__header {
         display: flex;
         justify-content: space-between;
         align-items: center;       
-
 
         & .home__button--logout {
             color: $red-btn;
@@ -42,6 +45,9 @@
                 font-size: 0.8rem;
             }
         }
+                @media (max-width: $breakpoint-sm) {
+                    justify-content: center;
+                }
     }
 
     &__title {
