--- a/src/styles/post-card.scss
+++ b/src/styles/post-card.scss
@@ -64,6 +64,7 @@
         font-size: 0.5rem;
         margin-top: 1.75rem;
         margin-bottom: 1rem;
+        gap: 0.25rem;
 
         & .post-card__button {
 
@@ -71,8 +72,9 @@
             &--view,
             &--delete {
                 font-size: 0.9rem;
-                padding: 0 1.5rem;
+                padding: 0 1.2rem;
                 border-radius: 30px;
+
             }
 
             &--edit {
